tests/resource/invalid/type/class/assign_to_non_existent_self.mamba
class X
    def z: Int

    def init(self, x: Int) =>
        self.y := x
